...

    var back = isBack ? IconButton(
      onPressed: () {
        FocusManager.instance.primaryFocus?.unfocus();
        Navigator.maybePop(context);
      },
      tooltip: 'Back',
      padding: const EdgeInsets.all(12.0),
      icon: Image.asset(
        backImg,
        color: ThemeUtils.getIconColor(context),
      ),
    ) : Gaps.empty;
...
          buttonTheme: ButtonThemeData(
            padding: const EdgeInsets.symmetric(horizontal: 16.0),
            minWidth: 60.0,
          ),
        ),
        child: FlatButton(
          child: Text(actionName, key: const Key('actionName')),
          textColor: ThemeUtils.isDark(context) ? Colours.dark_text : Colours.text,
          highlightColor: Colors.transparent,
          onPressed: onPressed,
        ),
      ),
    ) : Gaps.empty;
...
